T1-1330 Fix spacing with text and button

--- a/src/client/components/molecules/newsletter-form/newsletter-form.scss
+++ b/src/client/components/molecules/newsletter-form/newsletter-form.scss
@@ -36,7 +36,7 @@
 
     .inputs {
       display: inline-block;
-      margin-left: 18px;
+      margin-left: 20px;
     }
 
     :global(.button) {
